@@ -1,3 +1,6 @@
+2012-12-02 Molnar Karoly <molnarkaroly@users.sf.net>
+	* tools/device-manager.pl: I changed the copyright.
+
 2012-12-01 Molnar Karoly <molnarkaroly@users.sf.net>
 	* tools/device-manager.pl: Synchronization with the modified gpprocessor.c.
 
